// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerVessel Details Page should take a snapshot of whole page 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="GBR-23423-4234234/transportSelection"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            Add transportation details:
             
            container vessel
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/transport/containerVessel/details"
        method="POST"
      >
        <input
          name="currentUri"
          type="hidden"
          value=""
        />
        <input
          name="nextUri"
          type="hidden"
          value="/summary"
        />
        <input
          name="journey"
          type="hidden"
          value="catchCertificate"
        />
        <input
          name="vehicle"
          type="hidden"
          value=""
        />
        <input
          name="dashboardUri"
          type="hidden"
          value="/create-catch-certificate/catch-certificates"
        />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="vesselName"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Vessel name
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="vesselName"
                name="vesselName"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="flagState"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Flag state
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="flagState"
                name="flagState"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="containerNumber"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Container identification number or numbers
              </span>
              
              <input
                autocomplete="off"
                class="largeInput e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="containerNumber"
                name="containerNumber"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="departurePlace"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Place export leaves the UK
              </span>
              <span
                class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
              >
                For example, Hull.
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="departurePlace"
                name="departurePlace"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-n58wva-StyledColumn e4u1u2g0"
          >
            <div
              class="date-field-with-picker"
              id="exportDate"
            >
              <div
                class="column-field-picker"
              >
                <div
                  class="date-field e1vcssft0 css-vav5a4-StyledContainer-StyledHoc e4u1u2g0"
                >
                  <span
                    class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                  >
                    <span
                      class="label-ContainerVesselDetailPage-form e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      id="date-field-label-text"
                    >
                      Export date
                    </span>
                  </span>
                  <span
                    class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
                  >
                    For example, 31 03 1980
                  </span>
                  
                  <div
                    class="css-bw34j1-StyledList e107rt5v2"
                  >
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Day
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="dayInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Month
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="monthInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-17bpbza-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Year
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="yearInputName"
                        type="number"
                        value=""
                      />
                    </label>
                  </div>
                </div>
                <div
                  class="date-picker "
                >
                  <button>
                    <img
                      alt="calendar"
                      src="/static/assets/images/calendar.png"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/transport/containerVessel/details/saveAsDraft"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/GBR-23423-4234234/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Plane Details Page - when on the storage document journey1 should generate snapshot for the Plane Details page 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/transportSelection"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            Add transportation details:
             
            plane
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/transport/plane/details"
        method="POST"
      >
        <input
          name="currentUri"
          type="hidden"
          value=""
        />
        <input
          name="nextUri"
          type="hidden"
          value="/summary"
        />
        <input
          name="journey"
          type="hidden"
          value="storageNotes"
        />
        <input
          name="vehicle"
          type="hidden"
          value="plane"
        />
        <input
          name="dashboardUri"
          type="hidden"
          value="/create-catch-certificate/catch-certificates"
        />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="flightNumber"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Flight number
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="flightNumber"
                name="flightNumber"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="containerNumber"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Container identification number or numbers
              </span>
              
              <input
                autocomplete="off"
                class="largeInput e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="containerNumber"
                name="containerNumber"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="departurePlace"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Place export leaves the UK
              </span>
              <span
                class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
              >
                For example, Hull.
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="departurePlace"
                name="departurePlace"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-n58wva-StyledColumn e4u1u2g0"
          >
            <div
              class="date-field-with-picker"
              id="exportDate"
            >
              <div
                class="column-field-picker"
              >
                <div
                  class="date-field e1vcssft0 css-vav5a4-StyledContainer-StyledHoc e4u1u2g0"
                >
                  <span
                    class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                  >
                    <span
                      class="label-PlaneDetailPage-form e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      id="date-field-label-text"
                    >
                      Export date
                    </span>
                  </span>
                  <span
                    class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
                  >
                    For example, 31 03 1980
                  </span>
                  
                  <div
                    class="css-bw34j1-StyledList e107rt5v2"
                  >
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Day
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="dayInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Month
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="monthInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-17bpbza-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Year
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="yearInputName"
                        type="number"
                        value=""
                      />
                    </label>
                  </div>
                </div>
                <div
                  class="date-picker "
                >
                  <button>
                    <img
                      alt="calendar"
                      src="/static/assets/images/calendar.png"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/transport/plane/details/saveAsDraft"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/GBR-23423-4234234/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Train Details Page should generate snapshot for the page 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/transportSelection"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            Add transportation details:
             
            train
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/transport/train/details"
        method="POST"
      >
        <input
          name="currentUri"
          type="hidden"
          value=""
        />
        <input
          name="nextUri"
          type="hidden"
          value="/summary"
        />
        <input
          name="journey"
          type="hidden"
          value="catchCertificate"
        />
        <input
          name="vehicle"
          type="hidden"
          value=""
        />
        <input
          name="dashboardUri"
          type="hidden"
          value="/create-catch-certificate/catch-certificates"
        />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="railwayBillNumber"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Railway bill number
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="railwayBillNumber"
                name="railwayBillNumber"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="departurePlace"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Place export leaves the UK
              </span>
              <span
                class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
              >
                For example, Hull.
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="departurePlace"
                name="departurePlace"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-n58wva-StyledColumn e4u1u2g0"
          >
            <div
              class="date-field-with-picker"
              id="exportDate"
            >
              <div
                class="column-field-picker"
              >
                <div
                  class="date-field e1vcssft0 css-vav5a4-StyledContainer-StyledHoc e4u1u2g0"
                >
                  <span
                    class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                  >
                    <span
                      class="label-TrainDetailPage-form e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      id="date-field-label-text"
                    >
                      Export date
                    </span>
                  </span>
                  <span
                    class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
                  >
                    For example, 31 03 1980
                  </span>
                  
                  <div
                    class="css-bw34j1-StyledList e107rt5v2"
                  >
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Day
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="dayInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Month
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="monthInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-17bpbza-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Year
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="yearInputName"
                        type="number"
                        value=""
                      />
                    </label>
                  </div>
                </div>
                <div
                  class="date-picker "
                >
                  <button>
                    <img
                      alt="calendar"
                      src="/static/assets/images/calendar.png"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/transport/train/details/saveAsDraft"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/GBR-23423-4234234/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Truck Details Page should generate snapshot for the page 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="my number/transportSelection"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            Add transportation details:
             
            truck
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/transport/truck/details"
        method="POST"
      >
        <input
          name="currentUri"
          type="hidden"
          value=":documentNumber/add-transportation-details-truck"
        />
        <input
          name="nextUri"
          type="hidden"
          value=":documentNumber/summary"
        />
        <input
          name="journey"
          type="hidden"
          value="catchCertificateJourney"
        />
        <input
          name="vehicle"
          type="hidden"
          value=""
        />
        <input
          name="dashboardUri"
          type="hidden"
          value="/create-catch-certificate/catch-certificates"
        />
        <input
          name="cmr"
          type="hidden"
          value=""
        />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="nationalityOfVehicle"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Truck nationality
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="nationalityOfVehicle"
                name="nationalityOfVehicle"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="registrationNumber"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Registration number
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="registrationNumber"
                name="registrationNumber"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <label
              class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
              for="departurePlace"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              >
                Place export leaves the UK
              </span>
              <span
                class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
              >
                For example, Hull.
              </span>
              
              <input
                autocomplete="off"
                class="e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
                id="departurePlace"
                name="departurePlace"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-n58wva-StyledColumn e4u1u2g0"
          >
            <div
              class="date-field-with-picker"
              id="exportDate"
            >
              <div
                class="column-field-picker"
              >
                <div
                  class="date-field e1vcssft0 css-vav5a4-StyledContainer-StyledHoc e4u1u2g0"
                >
                  <span
                    class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                  >
                    <span
                      class="label-TruckDetailPage-form e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      id="date-field-label-text"
                    >
                      Export date
                    </span>
                  </span>
                  <span
                    class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
                  >
                    For example, 31 03 1980
                  </span>
                  
                  <div
                    class="css-bw34j1-StyledList e107rt5v2"
                  >
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Day
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="dayInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-iwpl6b-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Month
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="monthInputName"
                        type="number"
                        value=""
                      />
                    </label>
                    <label
                      class="e107rt5v1 css-17bpbza-StyledLabel-StyledHoc-StyledLabel e4u1u2g0"
                    >
                      <span
                        class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
                      >
                        Year
                      </span>
                      <input
                        class="css-lktfuz-StyledInput e107rt5v0"
                        name="yearInputName"
                        type="number"
                        value=""
                      />
                    </label>
                  </div>
                </div>
                <div
                  class="date-picker "
                >
                  <button>
                    <img
                      alt="calendar"
                      src="/static/assets/images/calendar.png"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/transport/truck/details/saveAsDraft"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/my number/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
